[gd_scene load_steps=12 format=3 uid="uid://bcbg4v28sofgf"]

[ext_resource type="Script" uid="uid://di6030qmclhtx" path="res://scripts/game/ui/pause_menu.gd" id="1_m3eqi"]
[ext_resource type="Shader" uid="uid://icfj2wtia20q" path="res://shaders/pause_menu_blur.gdshader" id="2_n2ns3"]
[ext_resource type="Texture2D" uid="uid://ck0lywbh5fam5" path="res://assets/ui/pause/freezer4.png" id="3_n2ns3"]
[ext_resource type="Texture2D" uid="uid://bdfk2wuhkeyoh" path="res://assets/ui/pause/freezer1.png" id="4_tn7ir"]
[ext_resource type="Texture2D" uid="uid://dr4iqbi41ksuf" path="res://assets/ui/pause/freezer2.png" id="5_a4qcm"]
[ext_resource type="Texture2D" uid="uid://dk3ujr3lsre6y" path="res://assets/ui/pause/freezer3.png" id="6_nsk5f"]
[ext_resource type="Texture2D" uid="uid://yqhr8bqcnqpf" path="res://assets/ui/pause/selector.png" id="7_a4qcm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ukid2"]
shader = ExtResource("2_n2ns3")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_nvm1h"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NinePatchRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hyqwd"]
resource_name = "blur"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.8, -0.041666668, -0.13333334, 0, 0),
"times": PackedFloat32Array(0, 0.23333335)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.33333334, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [null, ExtResource("4_tn7ir"), ExtResource("5_a4qcm"), ExtResource("6_nsk5f"), ExtResource("3_n2ns3")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NinePatchRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ee47"]
_data = {
&"RESET": SubResource("Animation_nvm1h"),
&"blur": SubResource("Animation_hyqwd")
}

[node name="pause_menu" type="Control" node_paths=PackedStringArray("animation_player", "vbox_containing_buttons")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3eqi")
animation_player = NodePath("AnimationPlayer")
vbox_containing_buttons = NodePath("PanelContainer/VBoxContainer")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ukid2")
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7ee47")
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1036.8
offset_bottom = -583.2
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
patch_margin_left = 38
patch_margin_top = 22
patch_margin_right = 38
patch_margin_bottom = 22

[node name="PanelContainer" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -70.0
offset_right = 59.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -88.5
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("7_a4qcm")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Panel" type="Panel" parent="PanelContainer/NinePatchRect"]
modulate = Color(1, 1, 1, 0.44705883)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.1864395
offset_right = -1.0
offset_bottom = -1.1864395
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 0
offset_left = 25.0
offset_top = 19.0
offset_right = 92.0
offset_bottom = 120.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "resume"

[node name="options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "options"

[node name="exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "exit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
